<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/viewbackground"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_background_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:contentDescription="@string/no_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_title"
                app:layout_constraintBottom_toBottomOf="@id/background"
                app:layout_constraintEnd_toEndOf="@id/background"
                app:layout_constraintStart_toStartOf="@id/background" />

            <ImageView
                android:id="@+id/editCarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/edit"
                android:src="@drawable/ic_edit_car"
                app:layout_constraintEnd_toEndOf="@id/background"
                app:layout_constraintTop_toTopOf="@id/background" />

            <ImageView
                android:id="@+id/pan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/edit"
                android:src="@drawable/ic_edit_pan"
                app:layout_constraintBottom_toBottomOf="@id/editCarButton"
                app:layout_constraintEnd_toEndOf="@id/editCarButton"
                app:layout_constraintStart_toStartOf="@id/editCarButton"
                app:layout_constraintTop_toTopOf="@id/editCarButton" />

            <ImageView
                android:id="@+id/cameraNoPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/no_image"
                android:src="@drawable/ic_camera"
                app:layout_constraintBottom_toTopOf="@id/title"
                app:layout_constraintEnd_toEndOf="@id/background"
                app:layout_constraintStart_toStartOf="@id/background"
                app:layout_constraintTop_toTopOf="@id/background" />

            <ImageView
                android:id="@+id/carNumberBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/car_gos_number"
                android:src="@drawable/ic_number_board"
                app:layout_constraintBottom_toBottomOf="@id/title"
                app:layout_constraintEnd_toEndOf="@id/title"
                app:layout_constraintTop_toTopOf="@id/title" />

            <TextView
                android:id="@+id/carNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_number"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="@id/carNumberBorder"
                app:layout_constraintEnd_toEndOf="@id/carNumberBorder"
                app:layout_constraintStart_toStartOf="@id/carNumberBorder"
                app:layout_constraintTop_toTopOf="@id/carNumberBorder" />

            <TextView
                android:id="@+id/driverName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/driver_name"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toTopOf="@id/title" />

            <TextView
                android:id="@+id/carName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="8dp"
                android:text="@string/car_name"
                app:layout_constraintBottom_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>